--- a/index.html
+++ b/index.html
@@ -1,289 +1,230 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Conteo Digital</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: Arial, sans-serif;
-      background: linear-gradient(to bottom, darkgreen, green);
-      color: white;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-    }
-
-    h1 {
-      color: white;
-      font-weight: bold;
-      margin-bottom: 20px;
-    }
-
-    .container {
-      background: rgba(0, 0, 0, 0.8);
-      padding: 20px;
-      border-radius: 10px;
-      width: 90%;
-      max-width: 800px;
-      text-align: center;
-    }
-
-    .upload-box {
-      background: white;
-      color: black;
-      padding: 15px;
-      margin: 20px 0;
-      border-radius: 5px;
-    }
-
-    .image-container {
-      position: relative;
-      margin: 20px 0;
-    }
-
-    .image-container img {
-      max-width: 100%;
-      height: auto;
-      display: block;
-      margin: 0 auto;
-    }
-
-    .circle {
-      position: absolute;
-      width: 50px;
-      height: 50px;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-weight: bold;
-      color: black;
-      background: rgba(128, 128, 128, 0.5);
-    }
-
-    .circle.yellow {
-      background: rgba(255, 255, 0, 0.5);
-    }
-
-    .circle.blue {
-      background: rgba(0, 0, 255, 0.5);
-    }
-
-    .buttons {
-      margin: 20px 0;
-    }
-
-    .buttons button {
-      padding: 10px 20px;
-      margin: 5px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      font-weight: bold;
-    }
-
-    .buttons button.maduro {
-      background: yellow;
-      color: black;
-    }
-
-    .buttons button.verde {
-      background: blue;
-      color: white;
-    }
-
-    .slider-container {
-      margin: 20px 0;
-    }
-
-    .slider-container label {
-      display: block;
-      margin-bottom: 10px;
-    }
-
-    table {
-      width: 100%;
-      background: white;
-      color: black;
-      border-collapse: collapse;
-      margin: 20px 0;
-    }
-
-    table, th, td {
-      border: 1px solid black;
-    }
-
-    th, td {
-      padding: 10px;
-      text-align: center;
-    }
-
-    .download-button {
-      margin: 20px 0;
-    }
-
-    .download-button button {
-      padding: 10px 20px;
-      background: darkgreen;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Conteo Digital</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: linear-gradient(to bottom, darkgreen, green);
+            color: white;
+            text-align: center;
+            margin: 0;
+            padding: 20px;
+        }
+        h1 {
+            font-weight: bold;
+        }
+        .container {
+            background-color: rgba(0, 0, 0, 0.7);
+            padding: 20px;
+            border-radius: 10px;
+            margin-top: 20px;
+        }
+        .image-container {
+            width: 100%;
+            max-width: 800px;
+            height: auto;
+            margin: 20px auto;
+            position: relative;
+            background-color: #f0f0f0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            overflow: hidden;
+        }
+        .image-container img {
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: contain;
+        }
+        .image-title-box {
+            background-color: white;
+            color: black;
+            padding: 10px;
+            margin: 20px auto;
+            width: 80%;
+            max-width: 800px;
+            border-radius: 5px;
+        }
+        .button {
+            padding: 10px 20px;
+            margin: 10px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        .button.maduro {
+            background-color: yellow;
+            color: black;
+        }
+        .button.pinton {
+            background-color: green;
+            color: white;
+        }
+        .button.verde {
+            background-color: blue;
+            color: white;
+        }
+        .circle {
+            position: absolute;
+            border-radius: 50%;
+            text-align: center;
+            line-height: 50px;
+            font-weight: bold;
+            transform: translate(-50%, -50%);
+        }
+        table {
+            width: 80%;
+            max-width: 800px;
+            margin: 20px auto;
+            background-color: white;
+            color: black;
+            border-collapse: collapse;
+        }
+        table, th, td {
+            border: 1px solid black;
+        }
+        th, td {
+            padding: 10px;
+        }
+        footer {
+            margin-top: 20px;
+            font-size: 0.8em;
+        }
+    </style>
 </head>
 <body>
-  <h1>Conteo Digital</h1>
-  <div class="container">
-    <div class="upload-box">
-      <p>Para nombrar la imagen, escriba un título aquí:</p>
-      <input type="text" id="title" placeholder="Escriba un título">
-      <button onclick="uploadImage()">Cargar Imagen</button>
+    <h1>Conteo Digital</h1>
+    <div class="container">
+        <div class="image-title-box">
+            <input type="text" id="imageTitle" placeholder="Escriba un título aquí">
+        </div>
+        <div class="image-container">
+            <img id="displayImage" src="" alt="Imagen cargada">
+        </div>
+        <input type="file" id="imageUpload" accept="image/*">
+        <button onclick="uploadImage()">Cargar Imagen</button>
+        <button class="button maduro" onclick="setMode('maduro')">Maduro</button>
+        <button class="button pinton" onclick="setMode('pinton')">Pinton</button>
+        <button class="button verde" onclick="setMode('verde')">Verde</button>
+        <button onclick="undo()">Deshacer</button>
+        <button onclick="refreshPage()">Actualizar Página</button>
+        <input type="range" id="circleSize" min="20" max="100" value="50" onchange="changeCircleSize(this.value)">
+        <table id="countTable">
+            <tr>
+                <th>Maduros</th>
+                <th>Pinton</th>
+                <th>Verdes</th>
+                <th>Total</th>
+            </tr>
+            <tr>
+                <td id="maduroCount">0</td>
+                <td id="pintonCount">0</td>
+                <td id="verdeCount">0</td>
+                <td id="totalCount">0</td>
+            </tr>
+            <tr>
+                <td id="maduroPercent">0%</td>
+                <td id="pintonPercent">0%</td>
+                <td id="verdePercent">0%</td>
+                <td>100%</td>
+            </tr>
+        </table>
+        <button onclick="downloadCSV()">Descargar CSV</button>
     </div>
+    <footer>
+        <p>Esta es una aplicación web beta, hecha para el área agrícola de y agricultores de Patagoniafresh © 2025</p>
+    </footer>
 
-    <div class="image-container">
-      <img id="uploaded-image" src="" alt="Imagen Cargada">
-    </div>
+    <script>
+        let currentMode = '';
+        let circles = [];
+        let counts = { maduro: 0, pinton: 0, verde: 0 };
+        let circleSize = 50;
 
-    <div class="buttons">
-      <button class="maduro" onclick="selectObject('maduro')">Maduros</button>
-      <button class="verde" onclick="selectObject('verde')">Verdes</button>
-      <button onclick="undo()">Deshacer</button>
-      <button onclick="refreshPage()">Actualizar Página</button>
-    </div>
-
-    <div class="slider-container">
-      <label for="circle-size">Ajustar Tamaño del Círculo:</label>
-      <input type="range" id="circle-size" min="10" max="100" value="50" oninput="updateCircleSize()">
-    </div>
-
-    <table id="count-table">
-      <thead>
-        <tr>
-          <th>Maduros</th>
-          <th>Verdes</th>
-          <th>Proporción (%)</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td id="count-maduro">0</td>
-          <td id="count-verde">0</td>
-          <td id="ratio">0</td>
-        </tr>
-      </tbody>
-    </table>
-
-    <div class="download-button">
-      <button onclick="downloadCSV()">Descargar CSV</button>
-    </div>
-  </div>
-
-  <script>
-    let selectedObject = null;
-    let circleSize = 50;
-    let counts = { maduro: 0, verde: 0 };
-    let circles = [];
-    let imageUploaded = false;
-
-    function uploadImage() {
-      const input = document.createElement('input');
-      input.type = 'file';
-      input.accept = 'image/*';
-      input.onchange = (e) => {
-        const file = e.target.files[0];
-        const reader = new FileReader();
-        reader.onload = (event) => {
-          const img = document.getElementById('uploaded-image');
-          img.src = event.target.result;
-          imageUploaded = true;
-        };
-        reader.readAsDataURL(file);
-      };
-      input.click();
-    }
-
-    function selectObject(object) {
-      selectedObject = object;
-    }
-
-    function updateCircleSize() {
-      circleSize = document.getElementById('circle-size').value;
-    }
-
-    function addCircle(event) {
-      if (!imageUploaded || !selectedObject) return;
-
-      const rect = event.target.getBoundingClientRect();
-      const x = event.clientX - rect.left;
-      const y = event.clientY - rect.top;
-
-      const circle = document.createElement('div');
-      circle.classList.add('circle');
-      circle.style.width = `${circleSize}px`;
-      circle.style.height = `${circleSize}px`;
-      circle.style.left = `${x - circleSize / 2}px`;
-      circle.style.top = `${y - circleSize / 2}px`; /* 50px más abajo */
-
-      if (selectedObject === 'maduro') {
-        circle.classList.add('yellow');
-        counts.maduro++;
-        circle.textContent = counts.maduro;
-      } else if (selectedObject === 'verde') {
-        circle.classList.add('blue');
-        counts.verde++;
-        circle.textContent = counts.verde;
-      }
-
-      document.querySelector('.image-container').appendChild(circle);
-      circles.push(circle);
-      updateTable();
-    }
-
-    function undo() {
-      if (circles.length > 0) {
-        const lastCircle = circles.pop();
-        if (lastCircle.classList.contains('yellow')) {
-          counts.maduro--;
-        } else if (lastCircle.classList.contains('blue')) {
-          counts.verde--;
+        function setMode(mode) {
+            currentMode = mode;
         }
-        lastCircle.remove();
-        updateTable();
-      }
-    }
 
-    function refreshPage() {
-      if (confirm('Si desea continuar perderá los datos realizados')) {
-        location.reload();
-      }
-    }
+        function uploadImage() {
+            const file = document.getElementById('imageUpload').files[0];
+            if (file) {
+                const reader = new FileReader();
+                reader.onload = function(e) {
+                    document.getElementById('displayImage').src = e.target.result;
+                };
+                reader.readAsDataURL(file);
+            }
+        }
 
-    function updateTable() {
-      const total = counts.maduro + counts.verde;
-      const ratio = total === 0 ? 0 : ((counts.maduro / total) * 100).toFixed(2);
-      document.getElementById('count-maduro').textContent = counts.maduro;
-      document.getElementById('count-verde').textContent = counts.verde;
-      document.getElementById('ratio').textContent = ratio;
-    }
+        document.getElementById('displayImage').onclick = function(event) {
+            if (currentMode) {
+                const rect = this.getBoundingClientRect();
+                const x = event.clientX - rect.left;
+                const y = event.clientY - rect.top + 50; // 50px más abajo
 
-    function downloadCSV() {
-      const title = document.getElementById('title').value || 'datos';
-      const csvContent = `data:text/csv;charset=utf-8,Maduros,Verdes,Proporción\n${counts.maduro},${counts.verde},${document.getElementById('ratio').textContent}%`;
-      const encodedUri = encodeURI(csvContent);
-      const link = document.createElement('a');
-      link.setAttribute('href', encodedUri);
-      link.setAttribute('download', `${title}.csv`);
-      document.body.appendChild(link);
-      link.click();
-    }
+                const circle = document.createElement('div');
+                circle.className = 'circle';
+                circle.style.width = circleSize + 'px';
+                circle.style.height = circleSize + 'px';
+                circle.style.left = x + 'px';
+                circle.style.top = y + 'px';
+                circle.style.backgroundColor = currentMode === 'maduro' ? 'rgba(255, 255, 0, 0.5)' :
+                                              currentMode === 'pinton' ? 'rgba(0, 128, 0, 0.5)' : 'rgba(0, 0, 255, 0.5)';
+                circle.innerText = ++counts[currentMode];
+                this.parentNode.appendChild(circle);
+                circles.push(circle);
+                updateTable();
+            }
+        };
 
-    document.getElementById('uploaded-image').addEventListener('click', addCircle);
-  </script>
+        function undo() {
+            if (circles.length > 0) {
+                const lastCircle = circles.pop();
+                counts[currentMode]--;
+                lastCircle.remove();
+                updateTable();
+            }
+        }
+
+        function refreshPage() {
+            if (confirm('Si desea continuar perderá los datos realizados')) {
+                location.reload();
+            }
+        }
+
+        function changeCircleSize(size) {
+            circleSize = size;
+        }
+
+        function updateTable() {
+            const total = counts.maduro + counts.pinton + counts.verde;
+            document.getElementById('maduroCount').innerText = counts.maduro;
+            document.getElementById('pintonCount').innerText = counts.pinton;
+            document.getElementById('verdeCount').innerText = counts.verde;
+            document.getElementById('totalCount').innerText = total;
+            document.getElementById('maduroPercent').innerText = total ? ((counts.maduro / total) * 100).toFixed(2) + '%' : '0%';
+            document.getElementById('pintonPercent').innerText = total ? ((counts.pinton / total) * 100).toFixed(2) + '%' : '0%';
+            document.getElementById('verdePercent').innerText = total ? ((counts.verde / total) * 100).toFixed(2) + '%' : '0%';
+        }
+
+        function downloadCSV() {
+            const title = document.getElementById('imageTitle').value || 'Conteo';
+            const csvContent = "data:text/csv;charset=utf-8," 
+                + "Categoria,Conteo,Porcentaje\n"
+                + `Maduro,${counts.maduro},${document.getElementById('maduroPercent').innerText}\n`
+                + `Pinton,${counts.pinton},${document.getElementById('pintonPercent').innerText}\n`
+                + `Verde,${counts.verde},${document.getElementById('verdePercent').innerText}\n`
+                + `Total,${counts.maduro + counts.pinton + counts.verde},100%`;
+            const encodedUri = encodeURI(csvContent);
+            const link = document.createElement("a");
+            link.setAttribute("href", encodedUri);
+            link.setAttribute("download", `${title}.csv`);
+            document.body.appendChild(link);
+            link.click();
+        }
+    </script>
 </body>
 </html>
